--- a/app/src/main/res/layout/activity_carcare.xml
+++ b/app/src/main/res/layout/activity_carcare.xml
@@ -37,7 +37,8 @@
             android:scrollbarThumbVertical="@null">
 
             <LinearLayout
-
+                android:id="@+id/li"
+                android:background="@color/md_amber_100"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -296,6 +297,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="10dp"
                         android:checked="false"
+                        android:background="@color/colorIcon"
                         android:textOn="เปิดร้าน"
                         android:textOff="ปิดร้าน"
                         android:textColor="#004785"
@@ -306,7 +308,7 @@
                 </androidx.gridlayout.widget.GridLayout>
 
                 <Button
-                    android:id="@+id/save"
+                    android:id="@+id/savecar"
                     style="@style/Button1"
                     android:layout_width="342dp"
                     android:layout_height="wrap_content"
@@ -314,10 +316,18 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
                     android:text="ปรับปรุงข้อมูล" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_below="@+id/li"
+                android:layout_height="wrap_content"
+                android:background="@color/md_deep_orange_100"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:layout_marginBottom="8dp"
                     android:text="เพิ่มสมาชิก"
                     android:layout_marginLeft="50dp"
@@ -335,25 +345,31 @@
                     app:rowCount="1">
 
                     <CheckBox
+                        android:id="@+id/permission1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:buttonTint="#009688"
                         android:checked="true"
                         android:text="สิทธิ์ในการจัดการระบบบริหารคาร์แคร์"
-                        android:textColor="@color/md_black_1000" />
+                        android:textColor="#004578" />
 
                     <CheckBox
+                        android:id="@+id/permission2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:buttonTint="#FF9800"
                         android:checked="true"
                         android:text="สิทธิ์ในการจัดการคิว"
-                        android:textColor="@color/md_black_1000" />
+                        android:textColor="#004578" />
 
                     <CheckBox
+                        android:id="@+id/permission3"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:buttonTint="#E91E63"
                         android:checked="true"
                         android:text="สิทธิ์ในการดูประวัติ"
-                        android:textColor="@color/md_black_1000" />
+                        android:textColor="#004578" />
 
                 </androidx.gridlayout.widget.GridLayout>
 
@@ -362,10 +378,18 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
                     app:alignmentMode="alignMargins"
-                    app:columnCount="1"
+                    app:columnCount="2"
                     app:columnOrderPreserved="false"
                     app:rowCount="1">
-
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="เลือกสมาชิก"
+                        android:textColor="#004578"
+                        android:textSize="18sp"
+                        app:layout_column="0"
+                        app:layout_row="0" />
                     <androidx.cardview.widget.CardView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -375,20 +399,21 @@
                         app:cardElevation="0dp"
                         app:layout_gravity="bottom">
 
+
                         <Spinner
-                            android:id="@+id/carsize"
+                            android:id="@+id/spinner"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="12dp"
                             android:layout_marginRight="12dp"
-                            android:minWidth="320dp"
+                            android:minWidth="200dp"
                             android:minHeight="45dp" />
                     </androidx.cardview.widget.CardView>
 
                 </androidx.gridlayout.widget.GridLayout>
 
                 <Button
-                    android:id="@+id/button_send"
+                    android:id="@+id/addmember"
                     style="@style/Button1"
                     android:layout_width="342dp"
                     android:layout_height="wrap_content"
