--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/md_blue_grey_800"
+    android:background="@color/md_pink_800"
     android:textColor="#FFC107"
     android:padding="10dp"
     android:fontFamily="@font/mitrregular"
