--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,6 +56,22 @@
         <item name="android:fontFamily">@font/mitrregular</item>
         <item name="android:textAllCaps">false</item>
     </style>
+    <style name="Button6" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">#CD1076</item>
+        <item name="android:minWidth">200dp</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/mitrregular</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+    <style name="Button7" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">#B28F00</item>
+        <item name="android:minWidth">200dp</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/mitrregular</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
