--- a/app/src/main/res/layout/activity_member.xml
+++ b/app/src/main/res/layout/activity_member.xml
@@ -31,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_gravity="center"
             android:scrollbarThumbHorizontal="@null"
             android:scrollbarThumbVertical="@null">
 
@@ -93,7 +94,7 @@
                 <androidx.gridlayout.widget.GridLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="50dp"
+                    android:layout_gravity="center"
                     app:alignmentMode="alignMargins"
                     app:columnCount="2"
                     app:columnOrderPreserved="false"
