--- a/app/src/main/res/layout/activity_menuqcar.xml
+++ b/app/src/main/res/layout/activity_menuqcar.xml
@@ -124,6 +124,7 @@ android:background="@color/md_amber_500"
 
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/menuqueue"
                     app:cardBackgroundColor="@color/md_cyan_900"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -134,7 +135,7 @@ android:background="@color/md_amber_500"
                     android:layout_margin="12dp">
 
                     <LinearLayout
-                        android:id="@+id/contact"
+                        android:id="@+id/menulogout"
                         android:orientation="vertical"
                         android:padding="16dp"
                         android:gravity="center"
