--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,6 +72,14 @@
         <item name="android:fontFamily">@font/mitrregular</item>
         <item name="android:textAllCaps">false</item>
     </style>
+    <style name="Button8" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">#b5322d</item>
+        <item name="android:minWidth">200dp</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/mitrregular</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
