--- a/app/src/main/res/drawable-v24/shapehistory.xml
+++ b/app/src/main/res/drawable-v24/shapehistory.xml
@@ -2,15 +2,15 @@
 
     <shape
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="rectangle"   >
+        android:shape="rectangle">
 
         <solid
-            android:color="@color/md_blue_grey_900" >
+            android:color="#FFC107" >
         </solid>
 
         <stroke
             android:width="2dp"
-            android:color="#F8F9FB" >
+            android:color="#FFC107" >
         </stroke>
 
         <padding
@@ -21,7 +21,7 @@
         </padding>
 
         <corners
-            android:radius="20dp"   >
+            android:radius="10dp"   >
         </corners>
 
     </shape>
