--- a/app/src/main/res/values/url.xml
+++ b/app/src/main/res/values/url.xml
@@ -35,4 +35,6 @@
     <string name="menureport">menureport</string>
     <string name="menuattribute">menuattribute</string>
     <string name="menuqueue">menuqueue</string>
+    <string name="queueing">queueing</string>
+    <string name="queue_detail">queue_detail</string>
 </resources>
