--- a/app/src/main/res/layout/activity_queue.xml
+++ b/app/src/main/res/layout/activity_queue.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipeContainer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -16,6 +21,7 @@
         app:titleTextColor="#fff"
         app:theme="@style/TransparentToolbar"
         app:navigationIcon="@drawable/ic_back_white"/>
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -81,4 +87,6 @@
 
 
     </ScrollView>
+
 </RelativeLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
