--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="8dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,14 +18,14 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:background="@color/md_blue_grey_900"
+            android:background="@drawable/button4_bg"
             android:layout_height="wrap_content">
 
             <View
                 android:id="@+id/ViewTop"
                 android:layout_width="match_parent"
                 android:layout_height="47dp"
-                android:background="#ECEDF1"
+                android:background="#004d81"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +33,7 @@
 
             <TextView
                 android:id="@+id/tvTitle"
+                android:textColor="@color/md_white_1000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -54,12 +54,14 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="16dp"
+                android:textColor="@color/md_white_1000"
                 android:gravity="center_horizontal"
                 android:text="ชื่อเจ้าของ"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
             <TextView
                 android:id="@+id/tvMessag"
                 android:layout_width="0dp"
@@ -83,6 +85,7 @@
                 android:gravity="center_horizontal"
                 android:text="สี และ แบรนด์"
                 android:textSize="16sp"
+                android:textColor="@color/md_white_1000"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvMessag" />
